--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,5 @@
 <resources>
     <color name="colorPrimary">#AA0000</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FFFFFF</color>
-    <color name="colorBilliard">#0A6C03</color>
+    <color name="colorAccent">#ffffff</color>
 </resources>
